src/scss/styles.scss
@import url("https://fonts.googleapis.com/css2?family=Dosis:wght@400;700;800&display=swap");

$bck-color: #e7e3e9;

$section-padding: 3rem 1.25rem;

*,
*::before,
*::after {
  box-sizing: border-box;
}

html {
  scroll-behavior: smooth;
}

body {
  font-family: "Dosis", sans-serif;
  font-weight: 400;
  margin: 0;
  padding: 0;
}

section {
  padding: $section-padding;
}

/* typegraphy */

h1 {
  font-size: 3.5rem;
}

h2 {
  font-size: 2.5rem;
}

h3 {
  font-size: 1.5rem;
}

p {
  font-size: 1.3rem;
}

.subtitle {
  font-weight: bold;
  text-align: center;
  margin-bottom: 3rem;
}

.underline--magical {
  background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
  background-repeat: no-repeat;
  background-size: 100% 0.2em;
  background-position: 0 88%;
  transition: background-size 0.25s ease-in;
  &:hover {
    // background-size: 100% 88%;
  }
}

.link {
  position: relative;
  display: inline-block;
  color: #2857af;

  background: linear-gradient(
    to right,
    midnightblue,
    midnightblue 50%,
    royalblue 50%
  );

  background-clip: text;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;

  background-size: 200% 100%;
  background-position: 100%;
  transition: background-position 275ms ease;
  text-decoration: none; // text decorations are clipped in WebKit browsers

  &:hover {
    background-position: 0 100%;
  }
}

/* social icons */
.hero {
  .wrapper {
    margin-top: 25px;
  }

  .list-unstyled {
    padding-left: 0;
    list-style: none;
  }

  .list-inline li {
    display: inline-block;
    padding-right: 5px;
    padding-left: 5px;
    margin-bottom: 10px;
  }

  /*Change icons size here*/
  .social-icons .fa {
    font-size: 1.8em;
  }

  /*Change icons circle size and color here*/
  .social-icons .fa {
    width: 50px;
    height: 50px;
    line-height: 50px;
    text-align: center;
    color: #fff;
    color: rgba(255, 255, 255, 0.8);
    -webkit-transition: all 0.3s ease-in-out;
    -moz-transition: all 0.3s ease-in-out;
    -ms-transition: all 0.3s ease-in-out;
    -o-transition: all 0.3s ease-in-out;
    transition: all 0.3s ease-in-out;
  }

  .social-icons.icon-circle .fa {
    border-radius: 50%;
  }

  .social-icons.icon-rounded .fa {
    border-radius: 5px;
  }

  .social-icons.icon-flat .fa {
    border-radius: 0;
  }

  .social-icons .fa:hover,
  .social-icons .fa:active {
    color: #fff;
    -webkit-box-shadow: 1px 1px 3px #333;
    -moz-box-shadow: 1px 1px 3px #333;
    box-shadow: 1px 1px 3px #333;
  }

  .social-icons.icon-zoom .fa:hover,
  .social-icons.icon-zoom .fa:active {
    -webkit-transform: scale(1.1);
    -moz-transform: scale(1.1);
    -ms-transform: scale(1.1);
    -o-transform: scale(1.1);
    transform: scale(1.1);
  }

  .social-icons .fa-github {
    background-color: #070709;
  }

  .social-icons .fa-linkedin {
    background-color: #0085ae;
  }
}
/*-----------*/

.video-bg::before {
  content: "";
  position: absolute;
  z-index: 2;
  width: 100%;
  height: 100%;
  -webkit-backdrop-filter: blur(5px); /* apply the blur */
  backdrop-filter: blur(5px); /* apply the blur */
  pointer-events: none; /* make the pseudo class click-through */
}

.video-bg {
  position: absolute;
  height: 100%;
  width: 100%;
  background: no-repeat center center;
  background-color: #202f45;
  background-image: url("../images/video-bg.jpg");
  background-size: cover;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  z-index: -999;
}

#video-background {
  height: 100%;
  width: 100%;
  object-fit: cover;
  opacity: 0;
}

/* header */
header {
  display: flex;
  flex-direction: column;
  height: 100vh;
}

// lang-switch
.lang-switch .flag {
  width: 30px;
  height: 30px;
}

/* navbar */
.navbar {
  padding: 0.5rem 0;
}

.navbar-brand__icon {
  height: 70px;
}

.navbar-toggler {
  border: none;
}

/* hero */
.hero {
  flex-grow: 1;
  display: flex;
  align-items: center;
  justify-content: center;
  color: #ffffff;

  img {
    display: none;
  }

  @media (min-width: 800px) {
    .content {
      display: flex;
      flex-direction: column;
      justify-content: space-between;
      align-items: flex-start;
    }

    img {
      display: block;
      width: 60%;
    }
  }

  .call-to-action {
    padding: 15px 0;
  }
}

/* about */

.about {
  .content {
    display: flex;
    justify-content: space-between;

    .download-cv {
      margin-top: 2rem;
    }
  }

  img {
    display: none;
  }

  @media (min-width: 800px) {
    .img-wrap {
      width: 100%;
    }

    img {
      display: block;
      margin-left: 2rem;
      width: 100%;
    }
  }
}

/* experiences */

.experiences {
  background-color: $bck-color;

  @media (min-width: 800px) {
    .content {
      display: flex;

      .content-left {
        width: 60%;
      }

      .content-right {
        flex-grow: 1;
        margin-left: 15px;
      }
    }
  }

  .experience {
    position: relative;
    background-color: #c7c4c9;
    padding: 1rem;
    margin: 1rem 0;
    max-width: 600px;
    border-radius: 8px;

    &:last-of-type {
      border-bottom: none;
    }

    .header {
      margin-bottom: 0.5rem;
    }

    .company {
      font-size: 1.5rem;
      font-weight: 500;
    }

    .job {
      font-size: 1.125rem;
      font-weight: 700;
    }
  }
}

/* skills */

.skills {
  .skillcards {
    width: 100%;
    display: grid;
    grid-gap: 20px;
    grid-template-columns: repeat(auto-fill, minmax(270px, 1fr));
    padding: 30px 10px;
    overflow: hidden;
  }

  .skillcard {
    width: 100%;
    position: relative;
    padding: 30px 20px;
    background-color: #ffffff;
    border-radius: 10px;
    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.26);
  }

  .skillcard__header {
    margin-bottom: 25px;
    position: relative;
    height: 40px;
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
  }

  .skillcard__header__title {
    font-size: 17px;
    font-weight: normal;
    text-align: center;
    color: #252525;
    display: flex;
    justify-content: center;
    align-items: center;
    text-transform: uppercase;
    letter-spacing: 1px;
  }

  .skillbar {
    width: 100%;
    margin-bottom: 25px;
    position: relative;
  }

  .skillbar:nth-child(5) {
    margin-bottom: 0;
  }

  .skillbar__header {
    width: 100%;
    display: flex;
    justify-content: space-between;
    align-items: center;
    position: relative;
    margin-bottom: 10px;
  }

  .skillbar__icon {
    margin-right: 5px;
    margin-bottom: 5px;
    font-size: 1.6rem;
    width: 25px;
  }

  .skillbar__label-wrap {
    display: flex;
    align-items: center;
  }

  .skillbar__label {
    font-size: 12px;
    color: #252525;
    text-transform: uppercase;
    letter-spacing: 1px;
    height: 100%;
    display: block;
  }

  .skillbar__counter {
    font-size: 12px;
    color: #252525;
    text-transform: uppercase;
    letter-spacing: 1px;
  }

  .skillbar__headway-wrap {
    width: 100%;
    background: #252525;
  }

  .skillbar__headway {
    width: 0%;
    height: 4px;
    position: relative;
    transition: width 2s linear;
    background: #2f73ef;
  }
}

/* projects */

.projects {
  p {
    font-size: 1.125rem;
  }

  .cards {
    display: grid;
    grid-gap: 30px;
    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
    justify-content: center;
    justify-items: center;
    padding: 30px;
  }

  .card-title {
    font-weight: bold;
  }

  .tags {
    padding-bottom: 1.5rem;

    .tag {
      font-size: 0.75rem;
      background-color: #c2bdbd;
      color: #ffffff;
      padding: 0 1rem;
      margin: 0 0.125rem;
      border-radius: 30px;
      display: inline-block;
    }
  }

  .btn + .btn {
    margin-left: 0.25rem;
  }
}

@media (min-width: 800px) {
}

// ===== Scroll top ===

#return-to-top {
  position: fixed;
  bottom: 20px;
  right: 20px;
  background: rgb(0, 0, 0);
  background: rgba(0, 0, 0, 0.7);
  width: 50px;
  height: 50px;
  display: none;
  border-radius: 35px;

  text-decoration: none;
  transition: all 0.3s ease;
}

#return-to-top i {
  margin: 0;
  color: #fff;
  position: relative;
  left: 16px;
  top: 13px;
  font-size: 19px;
  transition: all 0.3s ease;
}

#return-to-top:hover {
  background: rgba(0, 0, 0, 0.9);
}

#return-to-top:hover i {
  color: #fff;
  top: 10px;
}

